[workspace]
members = [".", "dep-inj-macros"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[package]
name = "dep-inj-rs"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "dep_inj"

[dependencies]
dep-inj-macros = { version = "0.1.0", path = "dep-inj-macros" }
